--- a/app/src/main/res/layout/activity_echievement.xml
+++ b/app/src/main/res/layout/activity_echievement.xml
@@ -12,17 +12,16 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:background="@drawable/gradual_change"
-            android:gravity="center"
             android:orientation="horizontal">
 
             <LinearLayout
                 android:id="@+id/back"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:orientation="horizontal">
 
                 <ImageButton
@@ -35,18 +34,18 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:gravity="center"
+                    android:layout_gravity="center_vertical"
                     android:text="发现"
                     android:textColor="#ffffff"
                     android:textSize="17dp" />
             </LinearLayout>
 
             <TextView
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="40dp"
-                android:layout_weight="1"
-                android:gravity="center"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:layout_gravity="center_vertical"
                 android:text="我的成就"
                 android:textColor="#ffffff"
                 android:textSize="19dp" />
@@ -55,13 +54,15 @@
                 android:id="@+id/tv_choose"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_gravity="center_vertical"
                 android:layout_marginRight="10dp"
-                android:gravity="center"
                 android:text="筛选"
                 android:textColor="#ffffff"
                 android:textSize="17dp" />
 
-        </LinearLayout>
+        </RelativeLayout>
 
 
         <RelativeLayout
