--- a/app/src/main/res/layout/activity_pechievement.xml
+++ b/app/src/main/res/layout/activity_pechievement.xml
@@ -13,17 +13,16 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:background="@drawable/gradual_change"
-            android:gravity="center"
             android:orientation="horizontal">
 
             <LinearLayout
                 android:id="@+id/back"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:orientation="horizontal">
 
                 <ImageButton
@@ -36,6 +35,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
                     android:gravity="center"
                     android:text="发现"
                     android:textColor="#ffffff"
@@ -43,8 +43,10 @@
             </LinearLayout>
 
             <TextView
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
                 android:layout_marginRight="40dp"
                 android:layout_weight="1"
                 android:gravity="center"
@@ -55,14 +57,16 @@
             <TextView
                 android:id="@+id/tv_choose"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
                 android:layout_marginRight="10dp"
                 android:gravity="center"
                 android:text="筛选"
                 android:textColor="#ffffff"
                 android:textSize="17dp" />
 
-        </LinearLayout>
+        </RelativeLayout>
 
 
         <RelativeLayout
