--- a/app/src/main/res/layout/activity_questionnaire.xml
+++ b/app/src/main/res/layout/activity_questionnaire.xml
@@ -7,18 +7,17 @@
     android:orientation="vertical"
     tools:context=".Student.Activity.QuestionnaireActivity">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:background="@drawable/gradual_change"
-        android:gravity="center"
         android:orientation="horizontal">
 
 
         <LinearLayout
             android:id="@+id/back"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="horizontal">
 
             <ImageButton
@@ -31,7 +30,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="center"
+                android:layout_gravity="center_vertical"
                 android:text="成就"
                 android:textColor="#ffffff"
                 android:textSize="17dp" />
@@ -39,11 +38,11 @@
 
         <TextView
             android:id="@+id/tv_title"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="40dp"
-            android:layout_weight="1"
-            android:gravity="center"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:layout_gravity="center_vertical"
             android:text="我的成就"
             android:textColor="#ffffff"
             android:textSize="19dp" />
@@ -52,13 +51,15 @@
             android:id="@+id/tv_one_count"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_gravity="center_vertical"
             android:layout_marginRight="10dp"
-            android:gravity="center"
             android:text="1/5"
             android:textColor="#ffffff"
             android:textSize="17dp" />
 
-    </LinearLayout>
+    </RelativeLayout>
 
     <com.mpl.GrowthStud.Student.View.NoScrollViewPager
         android:id="@+id/viewpager"
