--- a/app/src/main/res/layout/activity_message_info.xml
+++ b/app/src/main/res/layout/activity_message_info.xml
@@ -8,18 +8,17 @@
     android:orientation="vertical"
     tools:context=".Student.Activity.MessageInfoActivity">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:background="@drawable/gradual_change"
-        android:gravity="center"
         android:orientation="horizontal">
 
 
         <LinearLayout
             android:id="@+id/back"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="horizontal">
 
             <ImageButton
@@ -32,22 +31,22 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="center"
+                android:layout_gravity="center_vertical"
                 android:text="消息"
                 android:textColor="#ffffff"
                 android:textSize="15dp" />
         </LinearLayout>
 
         <TextView
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="40dp"
-            android:layout_weight="1"
-            android:gravity="center"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:layout_gravity="center_vertical"
             android:text="消息详情"
             android:textColor="#ffffff"
             android:textSize="20dp" />
-    </LinearLayout>
+    </RelativeLayout>
 
     <ImageView
         android:layout_width="match_parent"
