--- a/app/src/main/res/layout/activity_pget_score_info_info.xml
+++ b/app/src/main/res/layout/activity_pget_score_info_info.xml
@@ -8,18 +8,17 @@
     android:orientation="vertical"
     tools:context=".Parent.Activity.PGetScoreInfoInfoActivity">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:background="@drawable/gradual_change"
-        android:gravity="center"
         android:orientation="horizontal">
 
 
         <LinearLayout
             android:id="@+id/back"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="horizontal">
 
             <ImageButton
@@ -32,6 +31,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
                 android:gravity="center"
                 android:text="发现"
                 android:textColor="#ffffff"
@@ -40,17 +40,18 @@
 
         <TextView
             android:id="@+id/title"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
             android:layout_marginRight="40dp"
-            android:layout_weight="1"
             android:gravity="center"
             android:text="综合评价"
             android:textColor="#ffffff"
             android:textSize="19dp" />
 
 
-    </LinearLayout>
+    </RelativeLayout>
 
     <ImageView
         android:layout_width="match_parent"
