--- a/app/src/main/res/layout/activity_pvideo_check.xml
+++ b/app/src/main/res/layout/activity_pvideo_check.xml
@@ -14,23 +14,22 @@
         android:layout_weight="1"
         android:orientation="vertical">
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:background="@drawable/gradual_change"
-            android:gravity="center"
             android:orientation="horizontal">
 
 
             <LinearLayout
                 android:id="@+id/back"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:orientation="horizontal">
 
                 <ImageButton
-                    android:layout_width="18dp"
-                    android:layout_height="18dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:layout_marginLeft="10dp"
                     android:background="@mipmap/icon_white_back" />
@@ -38,7 +37,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:gravity="center"
+                    android:layout_gravity="center_vertical"
                     android:text="成就"
                     android:textColor="#ffffff"
                     android:textSize="17dp" />
@@ -46,16 +45,17 @@
 
             <TextView
                 android:id="@+id/tv_title"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="40dp"
-                android:layout_weight="1"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:layout_gravity="center_vertical"
                 android:gravity="center"
                 android:text="我的成就"
                 android:textColor="#ffffff"
                 android:textSize="19dp" />
 
-        </LinearLayout>
+        </RelativeLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
