--- a/app/src/main/res/layout/fragment_achievement.xml
+++ b/app/src/main/res/layout/fragment_achievement.xml
@@ -14,21 +14,18 @@
         android:orientation="horizontal">
 
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
             android:orientation="horizontal">
 
 
             <TextView
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
                 android:layout_gravity="center_vertical"
-                android:layout_marginLeft="15dp"
-                android:layout_weight="1"
-                android:gravity="center"
                 android:text="我的成就"
                 android:textColor="#ffffff"
                 android:textSize="19dp" />
@@ -37,17 +34,22 @@
                 android:id="@+id/ib_message"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
                 android:layout_gravity="center_vertical"
+                android:layout_marginRight="15dp"
                 android:background="@mipmap/bell" />
 
             <com.mpl.GrowthStud.Student.View.CircleImageView
                 android:id="@+id/iv_dot"
                 android:layout_width="5dp"
                 android:layout_height="5dp"
-                android:layout_gravity="center_vertical"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="15dp"
+                android:layout_marginTop="10dp"
                 android:background="#FF4800"
                 android:visibility="invisible" />
-        </LinearLayout>
+        </RelativeLayout>
 
 
     </LinearLayout>
