--- a/app/src/main/res/layout/activity_pget_score_info_info.xml
+++ b/app/src/main/res/layout/activity_pget_score_info_info.xml
@@ -60,6 +60,7 @@
     <ListView
         android:id="@+id/listview"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"></ListView>
+        android:layout_height="wrap_content"
+        android:dividerHeight="10dp"></ListView>
 
 </LinearLayout>
