--- a/app/src/main/res/layout/activity_video.xml
+++ b/app/src/main/res/layout/activity_video.xml
@@ -123,11 +123,19 @@
 
         <ImageView
             android:id="@+id/iv_video"
-            android:layout_width="160dp"
-            android:layout_height="120dp"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:layout_marginTop="10dp" />
+
+        <ImageButton
+            android:id="@+id/ib_start"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:background="@mipmap/startplay" />
 
         <ImageButton
             android:id="@+id/btn_delete"
@@ -136,6 +144,8 @@
             android:layout_alignEnd="@+id/iv_video"
             android:layout_alignParentTop="true"
             android:layout_alignRight="@+id/iv_video"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="20dp"
             android:background="@mipmap/delete_red"
             android:visibility="invisible" />
     </RelativeLayout>
