--- a/app/src/main/res/layout/activity_pget_score_info_info.xml
+++ b/app/src/main/res/layout/activity_pget_score_info_info.xml
@@ -33,7 +33,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:gravity="center"
-                android:text="发现"
+                android:text="综合"
                 android:textColor="#ffffff"
                 android:textSize="17dp" />
         </LinearLayout>
