--- a/app/src/main/res/layout/get_start_info_item.xml
+++ b/app/src/main/res/layout/get_start_info_item.xml
@@ -1,32 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="30dp"
+    android:layout_height="44dp"
     android:orientation="horizontal">
 
     <TextView
         android:id="@+id/tv_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
         android:layout_gravity="center"
         android:layout_marginLeft="10dp"
-        android:layout_weight="1"
         android:text=""
         android:textColor="#333333"
         android:textSize="17dp" />
 
+    <ImageView
+        android:id="@+id/image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:layout_gravity="center_vertical"
+        android:background="@mipmap/star_little" />
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_weight="1">
+        android:layout_centerVertical="true"
+        android:layout_gravity="center_vertical"
+        android:layout_marginLeft="5dp"
+        android:layout_toRightOf="@+id/image">
 
         <TextView
             android:id="@+id/start"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:drawableLeft="@mipmap/star_little"
             android:drawablePadding="5dp"
             android:text=""
             android:textColor="#3699ed"
@@ -53,12 +63,13 @@
         android:id="@+id/tv_score"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:layout_gravity="center_vertical"
         android:layout_marginRight="10dp"
-        android:layout_weight="1"
         android:drawableRight="@mipmap/right_arrow"
         android:gravity="center"
         android:text=""
         android:textColor="#3699ed"
         android:textSize="17dp" />
-</LinearLayout>
+</RelativeLayout>
