--- a/app/src/main/res/layout/complet_achieve_item.xml
+++ b/app/src/main/res/layout/complet_achieve_item.xml
@@ -33,7 +33,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="20dp"
                 android:layout_weight="3"
-                android:text="我的基本信息"
                 android:textColor="#353535"
                 android:textSize="15dp" />
 
@@ -56,7 +55,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="10dp"
                 android:layout_gravity="center_vertical"
-                android:background="@mipmap/little_wenzi_img" />
+                />
 
             <ImageView
                 android:layout_width="5dp"
@@ -68,7 +67,6 @@
                 android:layout_height="15dp"
                 android:layout_gravity="center_vertical"
                 android:drawablePadding="5dp"
-                android:text="图文"
                 android:textColor="#000000"
                 android:textSize="10dp" />
 
@@ -78,12 +76,13 @@
 
             <TextView
                 android:id="@+id/tv_2"
-                android:layout_width="wrap_content"
+                android:layout_width="80dp"
                 android:layout_height="15dp"
                 android:layout_gravity="center_vertical"
                 android:drawableLeft="@mipmap/little_duocai_img"
                 android:drawablePadding="5dp"
-                android:text="多彩生活"
+                android:ellipsize="end"
+                android:maxLines="1"
                 android:textColor="#000000"
                 android:textSize="10dp" />
 
