--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="text2">#666666</color>
     <color name="text_blank">#000000</color>
     <color name="label_bak">#E3F1FD</color>
+    <color name="cuntdown">#C4C4C4</color>
 </resources>
