--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,23 +7,34 @@
     android:orientation="vertical"
     tools:context=".Student.Activity.LoginActivity">
 
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="40dp" />
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
 
         <ImageView
             android:id="@+id/logo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:background="@mipmap/header_img" />
+            android:src="@mipmap/img_login" />
+
+        <ImageView
+            android:id="@+id/vi_1"
+            android:layout_width="match_parent"
+            android:layout_height="35dp"
+            android:layout_below="@+id/logo" />
 
 
         <LinearLayout
             android:id="@+id/ll"
             android:layout_width="match_parent"
             android:layout_height="100dp"
-            android:layout_below="@+id/logo"
+            android:layout_below="@+id/vi_1"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
             android:background="@drawable/shape_corner"
@@ -71,16 +82,44 @@
         </LinearLayout>
     </RelativeLayout>
 
-    <TextView
-        android:id="@+id/tv_error_string"
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="15dp" />
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="30dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:gravity="center_vertical"
-        android:textColor="#f36e6a"
-        android:textSize="14dp"
-        android:visibility="invisible" />
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/tv_pregist"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="16dp"
+            android:gravity="center_vertical"
+            android:text="家长注册"
+            android:textColor="#666666"
+            android:textSize="15dp" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1" />
+
+        <TextView
+            android:id="@+id/tv_forget_psd"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginRight="16dp"
+            android:gravity="center_vertical"
+            android:text="找回密码"
+            android:textColor="#666666"
+            android:textSize="15dp" />
+    </LinearLayout>
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="30dp" />
 
     <Button
         android:id="@+id/btn_login"
@@ -97,15 +136,6 @@
         android:layout_width="match_parent"
         android:layout_height="20dp" />
 
-    <TextView
-        android:id="@+id/tv_forget_psd"
-        android:layout_width="84dp"
-        android:layout_height="19dp"
-        android:layout_gravity="center_horizontal"
-        android:gravity="center"
-        android:text="忘记密码了？"
-        android:textColor="#2e97f0"
-        android:textSize="15dp" />
 
     <!--<LinearLayout-->
     <!--android:layout_width="match_parent"-->
