--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -4,10 +4,17 @@
         <!-- 开始是否打开摄像头 -->
         <attr name="is_open_camera" format="boolean" />
         <!-- 一次拍摄最长时间 -->
-        <attr name="record_max_time" format="integer"/>
+        <attr name="record_max_time" format="integer" />
         <!-- 视频分辨率宽度 -->
-        <attr name="video_width" format="integer"/>
+        <attr name="video_width" format="integer" />
         <!-- 视频分辨率高度 -->
-        <attr name="video_height" format="integer"/>
+        <attr name="video_height" format="integer" />
+    </declare-styleable>
+
+    <declare-styleable name="CountDownButton">
+        <attr name="millisinfuture" format="integer" />
+        <attr name="countdowninterva" format="integer" />
+        <attr name="normalColor" format="color" />
+        <attr name="countDownColor" format="color" />
     </declare-styleable>
 </resources>
